discussion/kv_engine/177325/177325_rev6_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-52884: Fix race condition to access the request

There is an optimization in the input buffer handling that we
try to execute the command without copying out the entire input
frame from the buffer in use by bufferevent. In the case where
a command needs to block for some reason we would copy out the
buffer.

The various commands should have copied out the pieces of
information they needed while working in their own threads,
and then pass of the result to the front end thread when
resuming from an ewb call.

There is however some commands which try to send data directly
from the background threads, and as part of doing a send response
call it would try to look up the input buffer. That input buffer
will change "right after" the command returned ewb, so these
threads would race accessing that buffer.

To work around the problem always copy out the buffer before
calling these packets. Luckily for us these commands are not
in the typical hot path and only carries a handfull of payload.

Change-Id: Iaa055f3d08398c845de44f6f2657046a70566c49

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-07-11 18:59:40.000000000
Message: 
Patch Set 6: Patch Set 5 was rebased
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-07-11 19:12:50.000000000
Message: 
Patch Set 6: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47775/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/daemon/cookie.cc(675): error C2838: "LastClosedCheckpoint": illegal qualified name in member declaration ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47775/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18952/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/cookie.cc:675:34: error: no member named "LastClosedCheckpoint" in "cb::mcbp::ClientOpcode" [clang-diagnostic-error]
    case cb::mcbp::ClientOpcode::LastClosedCheckpoint:
                                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/cookie.cc:688:34: error: no member named "CreateCheckpoint" in "cb::mcbp::ClientOpcode" [clang-diagnostic-error]
    case cb::mcbp::ClientOpcode::CreateCheckpoint:
                                 ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18952/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/cookie.cc:675:34:
error: no member named "LastClosedCheckpoint" in "cb::mcbp::ClientOpcode" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18952/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40131/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/daemon/cookie.cc:675:34:
error: no member named "LastClosedCheckpoint" in "cb::mcbp::ClientOpcode"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40131/ )

CMake error: CMakeLists.txt:145 (MESSAGE) ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40131/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8636/ : FAILURE

Compile error at [2022-07-11T19:05:42.113Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/daemon/cookie.cc:675:34:
error: no member named "LastClosedCheckpoint" in "cb::mcbp::ClientOpcode"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8636/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20854/ : FAILURE

Compile error at [2022-07-11T19:04:10.905Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/daemon/cookie.cc:675:34:
error: ?LastClosedCheckpoint? is not a member of ?cb::mcbp::ClientOpcode?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20854/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/21212/ : FAILURE

Compile error at [2022-07-11T19:04:01.333Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/daemon/cookie.cc:675:34:
error: ?LastClosedCheckpoint? is not a member of ?cb::mcbp::ClientOpcode?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/21212/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21902/ : FAILURE

Compile error at [2022-07-11T19:06:26.652Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/daemon/cookie.cc:675:34:
error: no member named "LastClosedCheckpoint" in "cb::mcbp::ClientOpcode"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21902/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/20097/ : FAILURE

Compile error at [2022-07-11T19:10:06.008Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/daemon/cookie.cc:675:34:
error: no member named "LastClosedCheckpoint" in "cb::mcbp::ClientOpcode"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/20097/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/29251/ : FAILURE

Compile error at [2022-07-11T19:10:38.146Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/daemon/cookie.cc:675:34:
error: no member named "LastClosedCheckpoint" in "cb::mcbp::ClientOpcode"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/29251/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8733/ : FAILURE

Compile error at [2022-07-11T19:06:11.895Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/daemon/cookie.cc:675:34:
error: ?LastClosedCheckpoint? is not a member of ?cb::mcbp::ClientOpcode?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8733/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/18108/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
